# voteabc.uk

./: .gitignore  Makefile
frontend/: .eslintrc.js  .prettierrc.js  package-lock.json  package.json
frontend/src/: template.html
frontend/src/components/: Deadline.svelte  Footer.svelte  InformationSection.svelte  LoadingBar.svelte  PostcodeInput.svelte  Question.svelte  RotatingArrow.svelte  Sharing.svelte  VoteSuggestion.svelte
frontend/src/data/: faqs.js  motivational-text.js  party-info.js
frontend/src/routes/: index.svelte
frontend/src/styles/: colours.js
frontend/static/: global.css
server/: Cargo.toml
server/src/: main.rs  redirect_to_https.rs
server/system/: voteabc.logrotate.conf  voteabc.service
