[package]
name = "voteabc-server"
version = "0.1.0"
authors = ["pgtrots <pgtrots@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "^1", features = ["rust-tls"] }
actix-web-middleware-redirect-https = "0.1.0"
actix-rt = "0.2.5"
actix-files = "0.1.6"
actix-threadpool = "0.1.2"
actix-service = "0.4.1"
futures = "0.1"
rustls = "^0.15"
ring = "^0.14"

serde = "1"
serde_json = "1"

log = "0.4.0"
env_logger = "0.7.1"

rusqlite = { version = "0.20", features = ["bundled"] }
r2d2 = "0.8.6"
r2d2_sqlite = "0.12.0"
